--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,19 @@
+/* header styles*/
+
+.header {
+    background-color: #000000;
+}
+
+.nav_link {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 1px;
+    text-align: left;
+    color: #FFFFFF;    
+}
+
 .drinks_left {
     background-image: url(/images/drinks.jpg);
 }
@@ -5,3 +21,106 @@
 .drinks_right {
     background-color: #996B60;
 }
+
+/* drinks styles */
+
+.drinks_title {
+    font-family: Liberation Serif;
+    font-size: 73px;
+    font-weight: 400;
+    line-height: 96px;
+    text-align: left;
+    color: #FFFFFF; 
+}
+
+.drinks_text {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: left;
+    color: #FFFFFF;    
+}
+
+.drinks_btn {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 1px;
+    text-align: center;
+    color: #000000;
+    border: 1px solid #FFFFFF;
+    background-color: inherit;
+    padding: 19px 50px;
+}
+
+/* brands styles */
+
+.brands_text {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: center;
+    color: #000000;
+}
+
+/* natural styles */
+
+.natural_title {
+    font-family: Liberation Serif;
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 80px;
+    text-align: center;
+    color: #000000;    
+}
+
+.natural_text {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 1px;
+    text-align: center;
+    color: #000000;    
+}
+
+.natural_sub_title {
+    font-family: Liberation Serif;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 44px;
+    text-align: center;
+    color: #000000;    
+}
+
+.natural_sub_text {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
+    color: #000000;    
+}
+
+.natural_btn {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 1px;
+    text-align: center;
+    color: #FFFFFF;
+    border: 1px solid #191919;
+    background-color: inherit;
+    padding: 19px 48px;
+}
+
+
+
+
+
+
+
