--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,21 @@
 /* header styles*/
 
 .header {
+    display: flex;
+    justify-content: space-around;
     background-color: #000000;
+    padding: 39px 60px 40px;
+}
+
+.nav_list {
+    display: flex;
+}
+
+.icon, .icon-Vector {
+    width: 83.97px;
+    height: 39.99px;
+    gap: 0px;
+    opacity: 0px;
 }
 
 .nav_link {
@@ -11,8 +25,12 @@
     line-height: 18px;
     letter-spacing: 1px;
     text-align: left;
-    color: #FFFFFF;    
+    color: #FFFFFF;
+    margin-right: 60px;
+    text-transform: uppercase;
 }
+
+/* drinks styles */
 
 .drinks_left {
     background-image: url(/images/drinks.jpg);
@@ -20,9 +38,8 @@
 
 .drinks_right {
     background-color: #996B60;
+    padding: 216px 203px 0px 60px ;
 }
-
-/* drinks styles */
 
 .drinks_title {
     font-family: Liberation Serif;
@@ -30,7 +47,8 @@
     font-weight: 400;
     line-height: 96px;
     text-align: left;
-    color: #FFFFFF; 
+    color: #FFFFFF;
+    margin-bottom: 34px;
 }
 
 .drinks_text {
@@ -39,7 +57,8 @@
     font-weight: 400;
     line-height: 32px;
     text-align: left;
-    color: #FFFFFF;    
+    color: #FFFFFF;
+    margin-bottom: 46px;
 }
 
 .drinks_btn {
@@ -53,9 +72,21 @@
     border: 1px solid #FFFFFF;
     background-color: inherit;
     padding: 19px 50px;
+    margin-bottom: 100px;
 }
 
 /* brands styles */
+
+.brands_list {
+    display: flex;
+    text-align: center;
+    padding: 60px 80px 41px 81px;
+}
+
+.brands_item {
+    margin-right: 186px;
+}
+
 
 .brands_text {
     font-family: Roboto;
@@ -117,6 +148,241 @@
     background-color: inherit;
     padding: 19px 48px;
 }
+
+/* lemonade styles */
+
+.lemonade_title {
+    font-family: Liberation Serif;
+    font-size: 53px;
+    font-weight: 400;
+    line-height: 80px;
+    text-align: left;
+    color: #000000;
+}
+
+.lemonade_text {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: left;
+    color: #000000;
+}
+
+/* easy styles */
+
+.easy_title {
+    font-family: Liberation Serif;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 44px;
+    text-align: left;
+    color: #000000;    
+}
+
+.easy_text {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: left;
+    color: #000000;   
+}
+
+/* notes styles */
+
+.notes_upper_text {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: center;
+    color: #FFFFFF;  
+}
+
+.notes_text {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.notes_sub_text {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    color: #8A8A8A;    
+}
+
+/* producers styles */
+
+.producers_title {
+    font-family: Liberation Serif;
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 80px;
+    text-align: left;
+    color:#000000;  
+}
+
+.producers_text {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    text-align: left;
+    color: #000000;
+}
+
+.producers_link {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 1px;
+    text-align: left;
+    color: #000000;
+}
+
+/* mood styles */
+
+.mood_title {
+    font-family: Liberation Serif;
+    font-size: 55px;
+    font-weight: 400;
+    line-height: 80px;
+    text-align: center;
+    color: #FFFFFF;    
+}
+
+.mood_text {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
+    color: #FFFFFF;    
+}
+
+.mood_btn {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 1px;
+    text-align: center;
+    color: #000000;
+    border: 1px solid #FFFFFF;
+    background-color: inherit;
+    padding: 18px 58px; 
+}
+
+.mood_sub_text {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
+    color: #FFFFFF;    
+}
+
+.mood_link {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: center;
+    color: #FFFFFF;    
+}
+
+/* footer styles */
+
+.stay_title {
+    font-family: Liberation Serif;
+    font-size: 42px;
+    font-weight: 400;
+    line-height: 72px;
+    text-align: left;
+    color: #FFFFFF;    
+}
+
+.stay_text {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.email_btn {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0.11999999731779099px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.explore_title {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: left;
+    color: #FFFFFF;
+}
+
+.explore_link {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 1px;
+    text-align: left;
+    color: #FFFFFF99;
+}
+
+.follow_link {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 1px;
+    text-align: left;
+    color: #FFFFFF99;
+}
+
+.drop_link {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 1px;
+    text-align: left;
+    color: #FFFFFF99;
+}
+
+.policy_link {
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 1px;
+    text-align: left;
+    color: #FFFFFF99;
+}
+
+
+
+
+
+
 
 
 
