--- a/css/styles.css
+++ b/css/styles.css
@@ -373,7 +373,6 @@
     width: 400px;
     height: 200px;
     text-align: center;
-    padding: 5px;
 }
 
 .mood_sub_text {
@@ -395,6 +394,16 @@
 }
 
 /* footer styles */
+
+.footer {
+    background-color: #000000;
+    padding: 55px 60px 55px 60px;
+}
+
+.footer_second_block {
+    display: flex;
+    justify-content:space-evenly;
+}
 
 .stay_title {
     font-family: Liberation Serif;
@@ -424,6 +433,11 @@
     color: #FFFFFF;
 }
 
+.explore_title, .follow_title, .drop_title {
+    text-transform: uppercase;
+    margin-bottom: 23.5px;
+}
+
 .explore_title {
     font-family: Roboto;
     font-size: 14px;
@@ -431,6 +445,10 @@
     line-height: 21px;
     text-align: left;
     color: #FFFFFF;
+}
+
+.explore_item, .follow_item, .drop_item {
+    margin-bottom: 21px;
 }
 
 .explore_link {
@@ -443,6 +461,15 @@
     color: #FFFFFF99;
 }
 
+.follow_title {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: left;
+    color: #FFFFFF  ;
+}
+
 .follow_link {
     font-family: Roboto;
     font-size: 12px;
@@ -453,6 +480,15 @@
     color: #FFFFFF99;
 }
 
+.drop_title {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: left;
+    color: #FFFFFF;  
+}
+
 .drop_link {
     font-family: Roboto;
     font-size: 12px;
@@ -461,6 +497,18 @@
     letter-spacing: 1px;
     text-align: left;
     color: #FFFFFF99;
+}
+
+.policy_list {
+    display: flex;
+}
+
+.policy_item {
+    margin-right: 60px;
+}
+
+.policy_item:last-child {
+    margin-right: 0;
 }
 
 .policy_link {
